<resources>

    <!--Main Fragment Strings-->
    <string name="app_name">Scavenge Hunter</string>

    <!--admin fragment Strings-->
    <string name="admin_hunt_status_textview">Hunt status goes here</string>
    <string name="admin_team_rankings_cardview">Team Rankings</string>
    <string name="admin_team_rankings_placeholder">Team Rankings goes here as list</string>
    <string name="admin_tasks_status_cardview">Tasks status</string>
    <string name="admin_completed_tasks_placeholder">Completed tasks goes here</string>

    <!--page titles for tabs-->
    <string name="page_title_admin_dash">DASHBOARD</string>
    <string name="admin_team_management_page_title">TEAM MANAGEMENT</string>
    <string name="activity_management_page_title">ACTIVITY MANAGEMENT</string>

    <!--team management fragment strings-->
    <string name="team_management_team_name">Team Name</string>
    <string name="team_management_teammates_number">number of team members</string>
    <string name="team_management_points">Points earned: 513</string>

    <!--activity management strings-->
    <string name="activity_management_activity_name">Activity Name</string>
    <string name="activity_description_description">Activity Description</string>
    <string name="activity_management_points">Activity Points</string>
    <string name="activity_management_add_fab">Add an activity</string>

    <!--navigation drawer strings-->
    <string name="navigation_view_home">Home</string>
    <string name="navigation_view_admin">Admin</string>
    <string name="navigation_view_account">Account</string>
    <string name="navigation_view_logoff">Logoff</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation bar</string>
    <string name="nav_drawer_user_name">User names goes here</string>
    <string name="navigation_hunt">Hunt</string>

    <!--sign in strings-->
    <string name="facebook_application_id" translatable="false">699407940236220</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb699407940236220</string>
    <string name="sign_in_cancelled">Sign in Cancelled!</string>
    <string name="sign_in_no_internet">No internet connection!</string>

    <!--home fragment strings-->
    <string name="home_status">Status of hunt or team</string>
    <string name="home_create_hunt_btn">Create a hunt</string>
    <string name="home_join_hunt_btn">Join a hunt</string>
    <string name="preference_delete_account_key" translatable="false">delete-account</string>
    <string name="home_no_hunt_textview">Add a hunt to get started.</string>
    <string name="home_delete_hunt_btn">Delete Hunt</string>

    <!--create hunt strings-->
    <string name="create_hunt_unique_name_textview">Give a unique name for your hunt</string>
    <string name="create_hunt_name_hint">Name it after your organization</string>
    <string name="create_hunt_password_textview">Password</string>
    <string name="create_hunt_password_hint">a simple password</string>
    <string name="create_hunt_begin_time_textview">Begin the hunt at:</string>
    <string name="create_hunt_choose_time_btn">Choose a date and time</string>
    <string name="create_hunt_end_textview">End the hunt at:</string>
    <string name="button_pressed_tag_key" translatable="false">button-pressed</string>
    <string name="create_hunt_btn">Create the hunt!</string>

    <!--time date dialog strings-->
    <string name="time_date_dialog_ok_btn">OK</string>
    <string name="time_date_dialog_cancel_btn">Cancel</string>

    <!--create objective dialog strings-->
    <string name="create_objective_dialog_title">Create an objective</string>
    <string name="create_objective_positive_btn">OK</string>
    <string name="create_objective_negative_btn">Cancel</string>
    <string name="create_objective_toast">Activity added</string>
    <string name="create_objective_name_edit_text">Objective Name</string>
    <string name="create_objective_description_edit_text">Objective Description</string>
    <string name="create_objectiev_points_edit_text">Assign points</string>

    <!--firebase strings-->
    <string name="firebase_path_objectives">objectives</string>
    <string name="firebase_path_users">users</string>

    <!--objective dialog fragment strings-->
    <string name="object_name_tag">objectName</string>
    <string name="object_description_tag">objectDescription</string>
    <string name="object_points_tag">objectPoints</string>
    <string name="edit_objectives_title">Edit Objective</string>
    <string name="object_updated_toast">Objective Updated</string>
    <string name="object_uid_tag">uId</string>
    <string name="object_dialog_fragment_tag">CreateObjectiveDialogFragmentEdit</string>

    <!--admin fragment strings-->
    <string name="admin_left_hunt_toast">Left Hunt</string>
    <string name="admin_join_hunt_toast">Joined Hunt</string>
    <string name="admin_join_hunt_btn">Join Hunt</string>
    <string name="admin_leave_hunt_btn">Leave Hunt</string>

    <!--hunt home fragment strings-->
    <string name="hunt_status_textview">Status goes here</string>

    <!--hunt objectives fragment strings-->
    <string name="hunt_fragment_objectives_title">Objectives</string>

    <!--join hunt dialog strings-->
    <string name="join_hunt_name_edit_text">Hunt Name</string>
    <string name="join_hunt_password_edit_text">Hunt\'s password</string>
    <string name="join_hunt_found_msg">Matching Hunt is found!</string>
    <string name="join_hunt_no_matching">No matching hunt</string>
    <string name="join_hunt_title">Join a Hunt</string>
    <string name="join_hunt_ok">OK</string>
    <string name="join_hunt_cancel">Cancel</string>
    <string name="join_hunt_msg">Joined Hunt!</string>
    <string name="join_hunt_incorrect_pswd">Incorrect Password</string>
    <string name="join_hunt_enter_name_msg">Please enter the name of the hunt!</string>
</resources>
