<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_unique_name_textview"/>

    <EditText
        android:id="@+id/hunt_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_hunt_name_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_password_textview"/>

    <EditText
        android:id="@+id/hunt_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_hunt_password_hint"
        android:inputType="textVisiblePassword"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_begin_time_textview"/>

    <Button
        android:id="@+id/start_time_btn"
        android:tag="start-time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_choose_time_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_end_textview"/>

    <Button
        android:id="@+id/end_time_btn"
        android:tag="end-time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_hunt_choose_time_btn"/>

    <Button
        android:id="@+id/create_hunt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/create_hunt_btn"/>

</LinearLayout>