<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/admin_hunt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="16dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:text="@string/admin_hunt_status_textview"/>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/admin_teamrank_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="4dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_rankings_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/admin_team_rankings_cardview"/>

            <TextView
                android:id="@+id/rankings_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_team_rankings_placeholder"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/admin_challengerank_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tasks_status_cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/admin_tasks_status_cardview"/>

            <TextView
                android:id="@+id/tasks_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_completed_tasks_placeholder"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>